turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:10: error: expected class or object definition
def motif():Unit ={
^Kerr36:45: error: Unmatched closing brace '}' ignored here
}
^